Fixing wrapped logo text overlapping on mobile

--- a/gatsby-theme-portfolio-minimal/src/components/SplashScreen/style.module.css
+++ b/gatsby-theme-portfolio-minimal/src/components/SplashScreen/style.module.css
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     width: auto;
-    height: 4rem;
+    height: 6.25rem;
 }
 
 .Backdrop {
